--- a/www/templates/deputies/browseDeputies.html
+++ b/www/templates/deputies/browseDeputies.html
@@ -1,9 +1,10 @@
 <ion-view view-title="Deputados">
   <ion-content>
-    <div class="list">
+    <div class="list" ng-controller = "getDeputies">
       <!--div class="item-divider">
         Partido X
       </div-->
+
       <a collection-repeat="itemDeputy in deputies" href="#/app/deputy/{{itemDeputy.id}}"
                     class="item item-avatar">
         <img ng-src="{{itemDeputy.image_path}}">
