--- a/www/templates/deputies/deputy.html
+++ b/www/templates/deputies/deputy.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-content>
-    <div class="list card">
+    <div class="list card" ng-controller = "findDeputy">
       <div class="item item-thumbnail-left">
         <img ng-src="{{deputy.image_path}}">
         <h2><strong>Nome: </strong>{{deputy.deputy_name}}</h2>
