refactoring searchDeputies controller

--- a/www/templates/deputies/searchDeputies.html
+++ b/www/templates/deputies/searchDeputies.html
@@ -1,6 +1,6 @@
 <ion-view>
 	<ion-content>
-	  <div class="list list-inset">
+	  <div class="list list-inset" ng-controller = "searchDeputies">
 	    <form ng-submit="doSearch(inputText)">
 	      <label class="item item-input">
 	        <i class="icon ion-search placeholder-icon"></i>
