refactoring achivements controller

--- a/www/templates/achievements/achievements.html
+++ b/www/templates/achievements/achievements.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Todas os Achievements">
+<ion-view view-title="Todas os Achievements" ng-controller = "getAchievements">
   <ion-content>
     <ion-list>
       <ion-item class="item-icon-left" ng-repeat="itemAchievement in achievements"
