--- a/www/templates/achievements/singleAchievement.html
+++ b/www/templates/achievements/singleAchievement.html
@@ -1,6 +1,6 @@
-<ion-view view-title="{{achievement.name}}">
+<ion-view view-title="{{achievement.name}}" >
   <ion-content>
-    <div class="list card">
+    <div class="list card" ng-controller = "singleAchievement">
 			<div class="item item-icon-left">
 				<i class="icon ion-clipboard"></i>
 				<h2 class="TitleDescription"> Descrição </h2>
