refactoring quests controller

--- a/www/templates/quests/quest.html
+++ b/www/templates/quests/quest.html
@@ -1,6 +1,6 @@
 <ion-view view-title="{{quest.name}}">
   <ion-content>
-    <div class="list card">
+    <div class="list card" ng-controller = "findQuest">
 			<div class="item item-icon-left">
 				<i class="icon ion-clipboard"></i>
 				<h2 class="QuestTitle"> Descrição </h2>
