--- a/www/templates/quests/quests.html
+++ b/www/templates/quests/quests.html
@@ -1,9 +1,9 @@
-<ion-view view-title="Todas as Quests">
+<ion-view view-title="Todas as Quests" ng-controller = "getQuests">
   <ion-content>
     <ion-list>
       <ion-item class="item-icon-left" ng-repeat="itemQuest in quests"
                 href="#/app/quests/{{itemQuest.id}}">
-				<i class="icon ion-ios-game-controller-b"> </i>
+				<i class="icon ion-ios-game-controller-b" ></i>
         {{itemQuest.name}}
       </ion-item>
     </ion-list>
