renaming controller function

--- a/www/templates/deputies/deputy.html
+++ b/www/templates/deputies/deputy.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-content>
-    <div class="list card" ng-controller = "findDeputy">
+    <div class="list card" ng-controller = "singleDeputy">
       <div class="item item-thumbnail-left">
         <img ng-src="{{deputy.image_path}}">
         <h2><strong>Nome: </strong>{{deputy.deputy_name}}</h2>
@@ -19,7 +19,7 @@
     <div class="item item-text-wrap">
       <strong>Nome Completo:</strong> {{deputy.name}}
     </div>
-  
+
     <div class="item item-text-wrap">
       <strong>Registro:</strong> {{deputy.registration}}
     </div>
