--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,7 +15,7 @@
   <ion-side-menu side="left">
     <ion-content class="sideMenu">
       <ion-list>
-          <img class="full-image" src="img/sideMenuHeader.png" />
+        <img class="full-image" src="img/sideMenuHeader.png" />
         <div class="item item-divider">
           Política
         </div>
@@ -37,10 +37,13 @@
         <a menu-close class="item item-icon-left" ui-sref="app.userprofile">
           <i class="icon ion-person"></i> Perfil
         </a>
-        <a menu-close class="item item-icon-left" ng-controller="UserCtrl" ng-click="logOut()">
+      </ion-list>
+
+      <div>
+        <a menu-close class="item item-icon-left logoutButton" ng-controller="UserCtrl" ng-click="logOut()">
           <i class="icon ion-power"></i> Sair
         </a>
-      </ion-list>
+      </div>
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
