--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,6 +15,7 @@
   <ion-side-menu side="left">
     <ion-content class="sideMenu">
       <ion-list>
+
         <img class="full-image" src="img/sideMenuHeader.png" />
         <div class="item item-divider">
           Política
@@ -26,7 +27,7 @@
           <i class="icon ion-person-stalker"></i> Deputados
         </a>
         <div class="item item-divider">
-          Usuário
+          Conquistas
         </div>
         <a menu-close class="item item-icon-left" href="#/app/quests">
           <i class="icon ion-ios-game-controller-b"></i> Quests
@@ -34,16 +35,17 @@
         <a menu-close class="item item-icon-left" href="#/app/achievements">
           <i class="icon ion-trophy"></i> Achievements
         </a>
+        <div class="item item-divider">
+          Outros
+        </div>
         <a menu-close class="item item-icon-left" ui-sref="app.userprofile">
           <i class="icon ion-person"></i> Perfil
         </a>
       </ion-list>
+      <button class="button icon-left ion-power logoutButton" ng-controller="UserCtrl" ng-click="logOut()">
+        Sair do app
+      </button>
 
-      <div>
-        <a menu-close class="item item-icon-left logoutButton" ng-controller="UserCtrl" ng-click="logOut()">
-          <i class="icon ion-power"></i> Sair
-        </a>
-      </div>
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
