--- a/www/templates/signUp/signUp.html
+++ b/www/templates/signUp/signUp.html
@@ -1,9 +1,9 @@
 <ion-header-bar class="temaPurrsuit" align-title="center">
-    <button class="button button-icon button-clear icon ion-chevron-left" ui-sref="login"></button>
+    <button class="button button-icon button-clear icon ion-chevron-left" ui-sref="index"></button>
 </ion-header-bar>
 <ion-view>
   <ion-content class="page">
-		<div class="signupPage">
+		<div>
 			<h2 class="purrTitle">Crie sua conta</h2>
 	    <form ng-submit="signUp(user)">
 	      <div class="list">
