--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,6 +1,9 @@
+<ion-header-bar class="temaPurrsuit" align-title="center">
+    <button class="button button-icon button-clear icon ion-chevron-left" ui-sref="index"></button>
+</ion-header-bar>
 <ion-view cache-view="false">
   <ion-content class="page">
-		<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xpl1/v/t34.0-12/13101411_1168501766502630_968318762_n.png?oh=4bf8ac04fa6620308b25376c87d648b1&oe=57377E55&__gda__=1463201252_fccc8643cdb0cf39ac15dfeef54a4ff6" class="purrSuitImage" />
+		<img src="img/PurrsuitPersonagem.png" class="purrSuitImage" />
 		<h2 class="purrTitle"> PurrSuit </h2>
     <form ng-submit="signIn(user)">
       <div class="list">
