--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,6 @@
 <ion-view cache-view="false">
   <ion-content class="page">
-		<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xpl1/v/t34.0-12/13101411_1168501766502630_968318762_n.png?oh=4bf8ac04fa6620308b25376c87d648b1&oe=57377E55&__gda__=1463201252_fccc8643cdb0cf39ac15dfeef54a4ff6" class="purrSuitImage" />
-		<h2 class="purrTitle"> PurrSuit </h2>
+		<img src="img/PurrsuitPersonagem.png" class="purrSuitImage" />
     <form ng-submit="signIn(user)">
       <div class="list">
         <label class="item item-input form">
