--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,36 @@
 /* Empty. Add your own CSS if you like */
+.deputy-name{
+	margin-top: -79px;
+	color: white;
+	font-size: 20px;
+	margin-left: 40%;
+}
+.follow-button{
+	margin-top: 8px;
+	margin-right: 10px;
+	float: right;
+	width: 100px;
+	height: 10px;
+}
+.attributes{
+	margin-top: 150px;
+}
+.deputyPerfil{
+	background-color: #607D8B;
+	width: 100%;
+	height: 132px;
+	margin: 0 auto;
+	display: table;
+	box-shadow: 2px 3px 2px #455A64;
+}
+.deputyImage{
+	border-radius: 100%;
+	width: 120px;	
+	height: 120px;
+	margin-top: -70px;
+	margin-left: 5%;
+	box-shadow: 2px 2px 2px #455A64;
+}
 .loginButton{
 	padding: 17px;
 	margin-top: -17px;	
