--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,10 +9,16 @@
 	margin-top: -45px;
 }
 
+.warningLogin{
+	margin-top: 10px;
+	margin-left: 50px;
+	color: white;
+}
+
 .logoutButton{
 	background-color: #FF5252;
-	margin-left: 57px;
-	margin-top: 40px;
+	margin-left: 100px;
+	margin-top: 50px;
 }
 
 .popup-buttons .button {
@@ -38,7 +44,8 @@
 
 .form{
 	margin: 0 auto;
-	margin-top: 10px;
+	margin-top: 24px;
+	margin-bottom: 20px;
 	width: 300px;
 	height: 40px;
 }
