task#52-Adding followers count in deputy view, and adding followed deputies view

--- a/www/templates/deputies/deputy.html
+++ b/www/templates/deputies/deputy.html
@@ -9,6 +9,14 @@
 	</div>
   <ion-content class="attributes" scroll="true" ng-controller="singleDeputy">
 		<div class="card">
+			<div class="item item-divider">
+				Número de seguidores
+			</div>
+			<div class="item item-text-wrap">
+				{{deputy.followers_count}}
+			</div>
+		</div>
+		<div class="card">
 		  <div class="item item-divider">
 		    Nome completo
 		  </div>
