--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -26,6 +26,9 @@
         <a menu-close class="item item-icon-left" href="#/app/browseDeputies">
           <i class="icon ion-person-stalker"></i> Deputados
         </a>
+        <a menu-close class="item item-icon-left" href="#/app/followedDeputies">
+          <i class="icon ion-star"></i> Deputados Seguidos
+        </a>
         <div class="item item-divider" ng-if="logged">
           Conquistas
         </div>
