User signup with nickname
Signed-off-by: Thiagotrfm <t_moreira@outlook.com>
Signed-off-by: inddiara <indiara96d@gmail.com>

--- a/www/templates/signUp/signUp.html
+++ b/www/templates/signUp/signUp.html
@@ -8,7 +8,7 @@
 	    <form ng-submit="signUp(user)">
 	      <div class="list">
 	        <label class="item item-input form">
-	          <input type="text" ng-model="user.name" placeholder="Nome">
+	          <input type="text" ng-model="user.nickname" placeholder="Nickname">
 	        </label>
 	        <label class="item item-input form">
 	          <input type="text" ng-model="user.email" placeholder="E-mail">
