--- a/www/templates/followedDeputies.html
+++ b/www/templates/followedDeputies.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Deputados">
+<ion-view view-title="Deputados Seguidos" cache-view = "false">
   <ion-content>
     <div class="list" ng-controller = "followedDeputies">
       <a collection-repeat="itemDeputy in followed" href="#/app/deputy/{{itemDeputy.id}}"
