--- a/www/templates/deputies/browseDeputies.html
+++ b/www/templates/deputies/browseDeputies.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Deputados">
+<ion-view view-title="Deputados" ng-controller = "UserCtrl">
   <ion-content>
     <div class="list" ng-controller = "getDeputies">
       <a collection-repeat="itemDeputy in deputies" href="#/app/deputy/{{itemDeputy.id}}"
-                    class="item item-avatar">
+                    class="item item-avatar" ng-click=following(itemDeputy.id)>
         <img ng-src="{{itemDeputy.image_path}}">
         <h2>{{itemDeputy.deputy_name}}</h2>
       </a>
