--- a/www/templates/followedDeputies.html
+++ b/www/templates/followedDeputies.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Deputados Seguidos" cache-view = "false">
+<ion-view view-title="Deputados Seguidos" cache-view = "false" ng-controller="UserCtrl">
   <ion-content>
     <div class="list" ng-controller = "followedDeputies">
       <a collection-repeat="itemDeputy in followed" href="#/app/deputy/{{itemDeputy.id}}"
-                    class="item item-avatar">
+                    class="item item-avatar" ng-click=following(itemDeputy.id)>
         <img ng-src="{{itemDeputy.image_path}}">
         <h2>{{itemDeputy.deputy_name}}</h2>
       </a>
