--- a/www/templates/userProfile.html
+++ b/www/templates/userProfile.html
@@ -3,7 +3,7 @@
     <div class="list card">
       <h1 class="item item-icon-left">
         <i class=" icon ion-person"></i>
-        {{currentUser.name}}
+        {{currentUser.nickname}}
       </h1>
       <h2 class="item item-icon-left">
         <i class="icon ion-email"></i>
