--- a/www/css/style.css
+++ b/www/css/style.css
@@ -128,3 +128,49 @@
 	display: table;
 	margin-top: -20px;
 }
+
+.levelBar {
+	height: 25px;
+	position: relative;
+	background: #555;
+	-moz-border-radius: 20px;
+	-webkit-border-radius: 20px;
+	border-radius: 20px;
+	padding: 10px;
+	box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.levelBar > span {
+  display: block;
+  height: 100%;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  background-color: #FF5252;
+  background-image: linear-gradient(
+    center bottom,
+    #FF5252 37%,
+    #FF5240 69%
+  );
+  box-shadow:
+    inset 0 2px 9px  rgba(255,255,255,0.3),
+    inset 0 -2px 6px rgba(0,0,0,0.4);
+  position: relative;
+  overflow: hidden;
+}
+
+#minXpInfo {
+	position: relative;
+	float:left;
+	margin-left: 22px;
+}
+
+#maxXpInfo {
+	position: relative;
+	float: right;
+	margin-right: 22px;
+
+}
