Adding image to levels
Signed-off-by: Matheus Oliveira <matheus_oliveira30@hotmail.com>
Signed-off-by: inddiara <indiara96d@gmail.com>

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -132,7 +132,7 @@
 .levelBar {
 	height: 25px;
 	position: relative;
-	background: #555;
+	background:  #607D8B;
 	-moz-border-radius: 20px;
 	-webkit-border-radius: 20px;
 	border-radius: 20px;
