--- a/www/templates/userProfile.html
+++ b/www/templates/userProfile.html
@@ -5,10 +5,16 @@
         <i class=" icon ion-person"></i>
         {{currentUser.nickname}}
       </h1>
+      <h1 class="item item-icon-left">
+        <i class=" icon ion-person"></i>
+        {{currentUser.gender}}
+      </h1>
       <h2 class="item item-icon-left">
         <i class="icon ion-email"></i>
         {{currentUser.email}}
       </h2>
+
+
     </div>
 
 
