Added Tests; Fixed level bar; Removed controller.js
Signed-off-by: Matheus Oliveira <matheus_oliveira30@hotmail.com>
Signed-off-by: inddiara <indiara96d@gmail.com>

--- a/www/templates/userProfile.html
+++ b/www/templates/userProfile.html
@@ -17,7 +17,7 @@
       <h2>Level {{currentUser.level.level_number}}</h2>
       <p>{{currentUser.level.level_description}}</p>
       <p>XP atual: {{currentUser.experience_points}}</p>
-      <div class="levelBar" ng-init=updateLevelBar()>
+      <div class="levelBar">
         <span style="width: {{levelPercentage}}%"></span>
       </div>
       <div id="minXpInfo">
