--- a/www/templates/deputies/deputy.html
+++ b/www/templates/deputies/deputy.html
@@ -2,11 +2,11 @@
 	<div ng-controller="UserCtrl">
     <div class="deputyPerfil"></div>
     <img class="deputyImage" src="{{deputy.image_path}}"/>
-		<button class="button button-balanced follow-button icon ion-person-add" ng-click=followDeputy(deputy.id)
+		<button class="button button-balanced follow-button icon ion-person-add" ng-click=followDeputy(deputy)
 		ng-hide="isFollowed">
 			Seguir
 		</button>
-		<button class="button button-assertive follow-button icon ion-sad" ng-click=unfollowDeputy(deputy.id)
+		<button class="button button-assertive follow-button icon ion-sad" ng-click=unfollowDeputy(deputy)
 		ng-show="isFollowed">
 			Deixar de Seguir
 		</button>
