--- a/www/templates/deputies/searchDeputies.html
+++ b/www/templates/deputies/searchDeputies.html
@@ -13,6 +13,8 @@
 	                  class="item item-avatar" ng-click=following(itemDeputy.id)>
 	      <img ng-src="{{itemDeputy.image_path}}">
 	      <h2>{{itemDeputy.deputy_name}}</h2>
+        <h4>{{itemDeputy.party.name}}</h4>
+				<h4>{{itemDeputy.uf.name}}</h4>
 	    </a>
 	  </div>
 	</ion-content>
