Creating receive quests from rails method
Signed-off-by: Ramon Sales <ramon.silvasales@gmail.com>
Signed-off-by: Stefania Bezerra da Silva <stebezerra@hotmail.com>

--- a/www/templates/quests/quests.html
+++ b/www/templates/quests/quests.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Todas as Quests" ng-controller = "getQuests">
+<ion-view view-title="Todas as Quests">
   <ion-content>
     <ion-list>
       <ion-item class="item-icon-left" ng-repeat="itemQuest in quests"
