--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -32,8 +32,8 @@
         <div class="item item-divider" ng-if="logged">
           Conquistas
         </div>
-        <a menu-close class="item item-icon-left" href="#/app/quests" ng-if="logged">
-          <i class="icon ion-ios-game-controller-b"></i> Quests
+        <a menu-close class="item item-icon-left" href="#/app/quests" ng-if="logged" ng-controller="QuestsCtrl" ng-click="getQuests(user.id)">
+          <i class="icon ion-ios-game-controller-b"></i> Minhas Quests
         </a>
         <a menu-close class="item item-icon-left" href="#/app/achievements" ng-if="logged">
           <i class="icon ion-trophy"></i> Achievements
