--- a/www/css/style.css
+++ b/www/css/style.css
@@ -160,6 +160,8 @@
 	box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
 	margin-left: 10px;
 	margin-right: 10px;
+
+	transition: width 2s;
 }
 
 .levelBar > span {
@@ -175,11 +177,10 @@
     #FF5252 37%,
     #FF5240 69%
   );
-  box-shadow:
-    inset 0 2px 9px  rgba(255,255,255,0.3),
-    inset 0 -2px 6px rgba(0,0,0,0.4);
   position: relative;
   overflow: hidden;
+	background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.25), inset 0 1px rgba(255, 255, 255, 0.1);
 }
 
 #minXpInfo {
