--- a/www/templates/userProfile.html
+++ b/www/templates/userProfile.html
@@ -1,5 +1,5 @@
 <ion-view cache-view="false" view-title="Perfil">
-  <ion-content>
+  <ion-content ng-init="updateLevel()">
 		<img class="user-image"ng-src="{{currentUser.level.image_url}}" />
 		<h2 class="user-nickname"> {{currentUser.nickname}} </h2><br>
 		<div class="levelBar">
