refactoring paths and data types

--- a/www/templates/deputies/deputy.html
+++ b/www/templates/deputies/deputy.html
@@ -79,7 +79,7 @@
 						Gasto
 					</div>
 					<div class="item item-text-wrap">
-						0 R$
+						R$ {{deputy.total_cost}}
 					</div>
 				</div>
 			</ion-slide>
