Getting user ranking position; fixed bugs
Signed-off-by: Matheus Oliveira <matheus_oliveira30@hotmail.com>
Signed-off-by: inddiara <indiara96d@gmail.com>

--- a/www/templates/userProfile.html
+++ b/www/templates/userProfile.html
@@ -1,5 +1,8 @@
 <ion-view cache-view="false" view-title="Perfil">
   <ion-content ng-init="updateLevel()">
+    <div ng-init="getUserPositionRanking()">
+
+    </div>
 		<img class="user-image"ng-src="{{currentUser.level.image_url}}" />
 		<h2 class="user-nickname"> {{currentUser.nickname}} </h2><br>
 		<div class="levelBar">
