--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,13 +1,9 @@
 <ion-header-bar class="temaPurrsuit" align-title="center">
-    <button class="button button-icon button-clear icon ion-chevron-left" ui-sref="index"></button>
+  <button class="button button-icon button-clear icon ion-chevron-left" ui-sref="index"></button>
 </ion-header-bar>
 <ion-view cache-view="false">
   <ion-content class="page">
-		<img src="img/PurrsuitPersonagem.png" class="purrSuitImage" />
-
-		<h2 class="purrTitle"> PurrSuit </h2>
-
-
+    <img src="img/MenuLogo.png" class="purrSuitImage" />
     <form name="myForm" ng-submit="signIn(user)">
 
       <div class="list">
