--- a/www/templates/mainPage.html
+++ b/www/templates/mainPage.html
@@ -2,8 +2,7 @@
 </ion-header-bar>
 <ion-view cache-view="false">
   <ion-content class="page">
-		<img src="img/PurrsuitPersonagem.png" class="purrSuitImage" />
-    <h2 class="purrTitle">PurrSuit</h2>
+		<img src="img/MenuLogo.png" class="purrSuitImage" />
     <div class="loginButton">
       <button class="button button-block secondColor" ui-sref='login'>Entrar</button>
     </div>
