Adding image_url to deputy view
Signed-off-by: Thiagotrfm <t_moreira@outlook.com>
Signed-off-by: Tulio Coelho <tulioopc@gmail.com>

--- a/www/templates/deputies/deputy.html
+++ b/www/templates/deputies/deputy.html
@@ -1,7 +1,7 @@
 <ion-view cache-view="false">
 	<div ng-controller="UserCtrl">
 		<div class="deputyPerfil"></div>
-		<img class="deputyImage" src="{{deputy.image_path}}" />
+		<img class="deputyImage" src="{{deputy.image_url}}" />
 		<button class="button button-balanced follow-button icon ion-person-add" ng-click=followDeputy(deputy) ng-hide="isFollowed">
 			Seguir
 		</button>
