Creating a method for updating the last_acess
Signed-off-by: Ramon Sales <ramon.silvasales@gmail.com>
Signed-off-by: Stefania Bezerra da Silva <stebezerra@hotmail.com>

--- a/www/templates/editUser.html
+++ b/www/templates/editUser.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Alterar dados">
+<ion-view cache-view="false" view-title="Alterar dados">
   <ion-content>
     <img class="user-image" ng-src="{{currentUser.level.image_url}}" />
     <h2 class="user-nickname"> {{currentUser.nickname}} </h2><br>
